--- a/authors.html
+++ b/authors.html
@@ -112,13 +112,12 @@
                 </span>
               </div>
               <span class="fxs_article_author">
-                <span class="fxs_txt_size_large fxs_txt_corp_dark_1_clr">
-                  <strong>Valeria Bednarik</strong>
-                </span>
+                <h2 class="fxs_headline_small">Valeria Bednarik</h2>
                 <span
                   class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr"
                 >
-                  American Chief Analyst <strong>FXStreet</strong>
+                  <span>American Chief Analyst </span>
+                  <span> <strong>FXStreet</strong></span>
                 </span>
               </span>
             </address>
@@ -139,13 +138,11 @@
                 </span>
               </div>
               <span class="fxs_article_author">
-                <span class="fxs_txt_size_large fxs_txt_corp_dark_1_clr">
-                  <strong>Yohay Elam</strong>
-                </span>
+                <h2 class="fxs_headline_small">Yohay Elam</h2>
                 <span
                   class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr"
                 >
-                  Analyst <strong>FXStreet</strong>
+                  <span>Analyst </span> <span> <strong>FXStreet</strong></span>
                 </span>
               </span>
             </address>
@@ -166,13 +163,11 @@
                 </span>
               </div>
               <span class="fxs_article_author">
-                <span class="fxs_txt_size_large fxs_txt_corp_dark_1_clr">
-                  <strong>Tomas Salles</strong>
-                </span>
+                <h2 class="fxs_headline_small">Tomas Salles</h2>
                 <span
                   class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr"
                 >
-                  Technical and Crypto Analyst <strong>FXStreet</strong>
+                <span>Technical and Crypto Analyst </span> <span> <strong>FXStreet</strong></span>
                 </span>
               </span>
             </address>
@@ -193,13 +188,12 @@
                 </span>
               </div>
               <span class="fxs_article_author">
-                <span class="fxs_txt_size_large fxs_txt_corp_dark_1_clr">
-                  <strong>Ed Ponsi, CTA</strong>
-                </span>
+                <h2 class="fxs_headline_small">Ed Ponsi, CTA</h2>
                 <span
                   class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr"
                 >
-                  Educator and author <strong>FXStreet</strong>
+                <span>Educator and author </span>
+                <span> <strong>FXStreet</strong></span>
                 </span>
               </span>
             </address>
@@ -220,14 +214,12 @@
                 </span>
               </div>
               <span class="fxs_article_author">
-                <span class="fxs_txt_size_large fxs_txt_corp_dark_1_clr">
-                  <strong>Sam Seiden</strong>
-                </span>
+                <h2 class="fxs_headline_small">Sam Seiden</h2>
                 <span
                   class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr"
                 >
-                  Trader, Analyst, & Educator
-                  <strong>Independent Analyst</strong>
+                <span>Trader, Analyst, & Educator </span>
+                <span> <strong>Independent Analyst</strong></span>
                 </span>
               </span>
             </address>
@@ -248,13 +240,12 @@
                 </span>
               </div>
               <span class="fxs_article_author">
-                <span class="fxs_txt_size_large fxs_txt_corp_dark_1_clr">
-                  <strong>Nenad Kerkez</strong>
-                </span>
+                <h2 class="fxs_headline_small">Nenad Kerkez</h2>
                 <span
                   class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr"
                 >
-                  Chief Analyst <strong>FXStreet</strong>
+                <span>Chief Analyst</span> 
+                <span> <strong>FXStreet</strong></span>
                 </span>
               </span>
             </address>
@@ -275,13 +266,12 @@
                 </span>
               </div>
               <span class="fxs_article_author">
-                <span class="fxs_txt_size_large fxs_txt_corp_dark_1_clr">
-                  <strong>Gregor Horvat</strong>
-                </span>
+                <h2 class="fxs_headline_small">Gregor Horvat</h2>
                 <span
                   class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr"
                 >
-                  Chief Technical Strategist <strong>EW-Forecast</strong>
+                <span>Chief Technical Strategist</span>
+                <span> <strong>EW-Forecast</strong></span>
                 </span>
               </span>
             </address>
@@ -302,13 +292,12 @@
                 </span>
               </div>
               <span class="fxs_article_author">
-                <span class="fxs_txt_size_large fxs_txt_corp_dark_1_clr">
-                  <strong>Kathy Lien</strong>
-                </span>
+                <h2 class="fxs_headline_small">Kathy Lien</h2>
                 <span
                   class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr"
                 >
-                  Managing Director <strong>BK Asset Management</strong>
+                <span>Managing Director</span>
+                <span> <strong>BK Asset Management</strong></span>
                 </span>
               </span>
             </address>
@@ -329,14 +318,12 @@
                 </span>
               </div>
               <span class="fxs_article_author">
-                <span class="fxs_txt_size_large fxs_txt_corp_dark_1_clr">
-                  <strong>Phil Carr</strong>
-                </span>
+                <h2 class="fxs_headline_small">Phil Carr</h2>
                 <span
                   class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr"
                 >
-                  Professional Trader and Trainer
-                  <strong>The Gold & Silver Club</strong>
+                <span>Professional Trader and Trainer</span>
+                <span> <strong>The Gold & Silver Club</strong></span>
                 </span>
               </span>
             </address>
