--- a/newsletter.html
+++ b/newsletter.html
@@ -99,12 +99,20 @@
                 </label>
             </div>
             <div class="fxs_clearfix fxs_marginBase"></div>
-            <a class="fxs_mutedLink fxs_fLeft fxs_back" href="index.html">
-                <span class="fas fa-angle-double-left fxs_hidden_s_iBlock"></span> Keep reading the news
-            </a>
-            <a href="authors.html" class="fxs_btn fxs_btn_cta fxs_fRight fxs_btn_small fxs_paddingBase_right_big fxs_paddingBase_left_big">
-                Continue
-            </a>
+        <p class="fxs_left-mobile-center">
+          <a class="fxs_mutedLink  fxs_back" href="index.html">
+            <span class="far fa-angle-double-left" aria-hidden="true"></span>
+            Keep reading the news
+          </a>
+        </p>
+        <p class="fxs_right-mobile-center">
+          <a
+            href="authors.html"
+            class="fxs_btn fxs_btn_cta  fxs_btn_small fxs_paddingBase_right_big fxs_paddingBase_left_big"
+          >
+            Continue
+          </a>
+        </p>
         </div>
     </div>
     <footer class="fxs_footer fxs_modal_footer">
