--- a/authors.html
+++ b/authors.html
@@ -199,7 +199,7 @@
             </address>
           </label>
           <input type="checkbox" class="fxs_hideElements" id="chip-5" />
-          <label class="fxs_chip-checkbox" for="chip-5">
+          <label class="fxs_chip-checkbox fxs_hidden_st" for="chip-5">
             <address class="fxs_contributorBox fxs_contributorBox_small">
               <div class="fxs_avatar_circleImage_m">
                 <span>
@@ -225,7 +225,7 @@
             </address>
           </label>
           <input type="checkbox" class="fxs_hideElements" id="chip-6" />
-          <label class="fxs_chip-checkbox" for="chip-6">
+          <label class="fxs_chip-checkbox fxs_hidden_st" for="chip-6">
             <address class="fxs_contributorBox fxs_contributorBox_small">
               <div class="fxs_avatar_circleImage_m">
                 <span>
@@ -251,7 +251,7 @@
             </address>
           </label>
           <input type="checkbox" class="fxs_hideElements" id="chip-7" />
-          <label class="fxs_chip-checkbox" for="chip-7">
+          <label class="fxs_chip-checkbox fxs_hidden_st" for="chip-7">
             <address class="fxs_contributorBox fxs_contributorBox_small">
               <div class="fxs_avatar_circleImage_m">
                 <span>
@@ -277,7 +277,7 @@
             </address>
           </label>
           <input type="checkbox" class="fxs_hideElements" id="chip-8" />
-          <label class="fxs_chip-checkbox" for="chip-8">
+          <label class="fxs_chip-checkbox fxs_hidden_st" for="chip-8">
             <address class="fxs_contributorBox fxs_contributorBox_small">
               <div class="fxs_avatar_circleImage_m">
                 <span>
@@ -303,7 +303,7 @@
             </address>
           </label>
           <input type="checkbox" class="fxs_hideElements" id="chip-9" />
-          <label class="fxs_chip-checkbox" for="chip-9">
+          <label class="fxs_chip-checkbox fxs_hidden_st" for="chip-9">
             <address class="fxs_contributorBox fxs_contributorBox_small">
               <div class="fxs_avatar_circleImage_m">
                 <span>
@@ -328,6 +328,9 @@
               </span>
             </address>
           </label>
+          <p class="fxs_visible_s fxs_txt_center fxs_col_100">
+              <strong>SHOW MORE AUTHORS</strong> <span class="fas fa-angle-down"></span>
+          </p>
         </div>
         <div class="fxs_clearfix fxs_marginBase"></div>
         <p class="fxs_left-mobile-center">
