--- a/form.html
+++ b/form.html
@@ -54,11 +54,11 @@
             </p>
             <div class="fxs_clearfix fxs_marginBase"></div>
             <div class="fxs_formGroup">
-                <label>YOUR NAME</label>
+                <label class="fxs_txt_size_small">YOUR NAME</label>
                 <input type="text" class="fxs_textInput" placeholder="Write your name">
             </div>
             <div class="fxs_formGroup">
-                <label>COUNTRY</label>
+                <label class="fxs_txt_size_small">COUNTRY</label>
                 <select class="fxs_select" placeholder="Select your country">
                     <option value="">Select your Country</option>
                     <option value="+93" countrycode="AF">Afghanistan</option>
@@ -310,7 +310,7 @@
             </div>
 
             <div class="fxs_formGroup">
-                <label>PHONE NUMBER</label>
+                <label class="fxs_txt_size_small">PHONE NUMBER</label>
                 <input type="tel" class="fxs_textInput error" placeholder="+XX XXXXXXXXXXXXXX">
             </div>
 
