--- a/authors.html
+++ b/authors.html
@@ -21,11 +21,10 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i&amp;display=swap"
         rel="stylesheet" />
     <link href="https://staticcontent.fxstreet.com/website/css/fxs_screen.min.css" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/22a9d93fa2.js">
-    </script>
+    <script src="https://kit.fontawesome.com/22a9d93fa2.js"></script>
     <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/latest/css/pro.min.css" media="all" />
     <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/latest/css/pro.min.css" media="all" />
-    <title> FXStreet - The Foreign Exchange Market </title>
+    <title>FXStreet - The Foreign Exchange Market</title>
     <meta name="lang" content="en" />
     <meta name="description"
         content="FXStreet is a leading source for reliable news and real time Forex analysis. FXStreet offers real-time exchange rates, charts and an economic calendar." />
@@ -37,13 +36,10 @@
     <header class="fxs_simpleHeader">
         <div class="fxs_container">
             <a class="fxs_btn fxs_back" href="index.html">
-                <i class="fas fa-chevron-circle-left" aria-hidden="true">
-                </i>
+                <i class="fas fa-chevron-circle-left" aria-hidden="true"> </i>
                 <span>Back</span>
             </a>
-            <a href="index.html" class="fxs_logo">
-
-            </a>
+            <a href="index.html" class="fxs_logo"> </a>
         </div>
     </header>
     <div class="fxs_flexbox_justify_around_items_start">
@@ -68,8 +64,7 @@
                         <span class="fxs_article_author">
                             <h2 class="fxs_headline_small">Valeria Bednarik</h2>
                             <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr">
-                                <span>American
-                                    Chief Analyst </span>
+                                <span>American Chief Analyst </span>
                                 <span>
                                     <strong>FXStreet</strong>
                                 </span>
@@ -91,8 +86,7 @@
                         <span class="fxs_article_author">
                             <h2 class="fxs_headline_small">Yohay Elam</h2>
                             <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr">
-                                <span>Analyst
-                                </span>
+                                <span>Analyst </span>
                                 <span>
                                     <strong>FXStreet</strong>
                                 </span>
@@ -114,8 +108,7 @@
                         <span class="fxs_article_author">
                             <h2 class="fxs_headline_small">Tomas Salles</h2>
                             <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr">
-                                <span>Technical
-                                    and Crypto Analyst </span>
+                                <span>Technical and Crypto Analyst </span>
                                 <span>
                                     <strong>FXStreet</strong>
                                 </span>
@@ -137,8 +130,7 @@
                         <span class="fxs_article_author">
                             <h2 class="fxs_headline_small">Ed Ponsi, CTA</h2>
                             <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr">
-                                <span>Educator
-                                    and author </span>
+                                <span>Educator and author </span>
                                 <span>
                                     <strong>FXStreet</strong>
                                 </span>
@@ -160,8 +152,7 @@
                         <span class="fxs_article_author">
                             <h2 class="fxs_headline_small">Sam Seiden</h2>
                             <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr">
-                                <span>Trader,
-                                    Analyst, & Educator </span>
+                                <span>Trader, Analyst, & Educator </span>
                                 <span>
                                     <strong>Independent Analyst</strong>
                                 </span>
@@ -183,8 +174,7 @@
                         <span class="fxs_article_author">
                             <h2 class="fxs_headline_small">Nenad Kerkez</h2>
                             <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr">
-                                <span>Chief
-                                    Analyst</span>
+                                <span>Chief Analyst</span>
                                 <span>
                                     <strong>FXStreet</strong>
                                 </span>
@@ -206,8 +196,7 @@
                         <span class="fxs_article_author">
                             <h2 class="fxs_headline_small">Gregor Horvat</h2>
                             <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr">
-                                <span>Chief
-                                    Technical Strategist</span>
+                                <span>Chief Technical Strategist</span>
                                 <span>
                                     <strong>EW-Forecast</strong>
                                 </span>
@@ -229,8 +218,7 @@
                         <span class="fxs_article_author">
                             <h2 class="fxs_headline_small">Kathy Lien</h2>
                             <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr">
-                                <span>Managing
-                                    Director</span>
+                                <span>Managing Director</span>
                                 <span>
                                     <strong>BK Asset Management</strong>
                                 </span>
@@ -252,8 +240,7 @@
                         <span class="fxs_article_author">
                             <h2 class="fxs_headline_small">Phil Carr</h2>
                             <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr">
-                                <span>Professional
-                                    Trader and Trainer</span>
+                                <span>Professional Trader and Trainer</span>
                                 <span>
                                     <strong>The Gold & Silver Club</strong>
                                 </span>
@@ -262,13 +249,15 @@
                     </address>
                 </label>
                 <div class="fxs_visible_ss fxs_col_100" id="showmore">
-                    <hr/>
+                    <hr />
                     <script>
                         function showAllAuthors() {
-                            document.querySelectorAll('.fxs_hidden_xs').forEach(element => {
-                                element.classList.remove('fxs_hidden_xs');
+                            document.querySelectorAll(".fxs_hidden_xs").forEach(element => {
+                                element.classList.remove("fxs_hidden_xs");
                             });
-                            document.querySelector('#showmore').classList.add('fxs_hideElements')
+                            document
+                                .querySelector("#showmore")
+                                .classList.add("fxs_hideElements");
                         }
                     </script>
                     <p class="fxs_txt_center">
@@ -277,25 +266,24 @@
                                 <span>
                                     SHOW MORE AUTHORS
                                 </span>
-                                <span class="fas fa-angle-down">
-                                </span>
+                                <span class="fas fa-angle-down"> </span>
                             </strong>
                         </button>
                     </p>
                 </div>
             </div>
-            <div class="fxs_clearfix fxs_marginBase">
-
-            </div>
-            <p class="fxs_left-mobile-center">
-                <a class="fxs_mutedLink  fxs_back" href="index.html">
-                    <span class="far fa-angle-double-left" aria-hidden="true">
-                    </span> Keep reading the news </a>
-            </p>
+            <div class="fxs_clearfix fxs_marginBase fxs_hidden_xs"></div>
             <p class="fxs_right-mobile-center">
                 <a href="getPremium.html"
                     class="fxs_btn fxs_btn_cta  fxs_btn_small fxs_paddingBase_right_big fxs_paddingBase_left_big">
-                    Continue </a>
+                    Continue
+                </a>
+            </p>
+            <p class="fxs_left-mobile-center">
+                <a class="fxs_mutedLink  fxs_back" href="index.html">
+                    <span class="far fa-angle-double-left" aria-hidden="true"> </span>
+                    Keep reading the news
+                </a>
             </p>
         </div>
     </div>
