--- a/authors.html
+++ b/authors.html
@@ -252,7 +252,7 @@
                     <hr />
                     <script>
                         function showAllAuthors() {
-                            document.querySelectorAll(".fxs_hidden_xs").forEach(element => {
+                            document.querySelectorAll(".fxs_chip-checkbox.fxs_hidden_xs").forEach(element => {
                                 element.classList.remove("fxs_hidden_xs");
                             });
                             document
