--- a/form.html
+++ b/form.html
@@ -37,11 +37,10 @@
 <body cz-shortcut-listen="true">
     <header class="fxs_simpleHeader">
         <div class="fxs_container">
-            <a class="fxs_btn fxs_back" href="index.html"><i
-                    class="fas fa-chevron-circle-left" aria-hidden="true"></i>
+            <a class="fxs_btn fxs_back" href="index.html"><i class="fas fa-chevron-circle-left" aria-hidden="true"></i>
                 <span>Back</span>
             </a>
-            <a href="index.html" class="fxs_logo" ></a>
+            <a href="index.html" class="fxs_logo"></a>
         </div>
     </header>
     <div class="fxs_flexbox_justify_around_items_start">
@@ -319,19 +318,17 @@
             </p>
 
             <div class="fxs_clearfix fxs_marginBase"></div>
-                    <p class="fxs_left-mobile-center">
-
-            <a class="fxs_mutedLink  fxs_back" href="index.html">
-                <span class="fas fa-angle-double-left fxs_hidden_s_iBlock"></span> Keep reading the news
-            </a>
-                    </p>
-        <p class="fxs_right-mobile-center">
-
-            <a href="newsletter.html" class="fxs_btn fxs_btn_cta  fxs_btn_small fxs_paddingBase_right_big fxs_paddingBase_left_big">
-                Continue
-            </a>
-                                </p>
-
+            <p class="fxs_right-mobile-center">
+                <a href="newsletter.html"
+                    class="fxs_btn fxs_btn_cta  fxs_btn_small fxs_paddingBase_right_big fxs_paddingBase_left_big">
+                    Continue
+                </a>
+            </p>
+            <p class="fxs_left-mobile-center">
+                <a class="fxs_mutedLink  fxs_back" href="index.html">
+                    <span class="fas fa-angle-double-left fxs_hidden_s_iBlock"></span> Keep reading the news
+                </a>
+            </p>
         </div>
         <script src="./js/onboardingform.js"></script>
     </div>
