--- a/authors.html
+++ b/authors.html
@@ -281,7 +281,7 @@
             </p>
             <p class="fxs_left-mobile-center">
                 <a class="fxs_mutedLink  fxs_back" href="index.html">
-                    <span class="far fa-angle-double-left" aria-hidden="true"> </span>
+                    <span class="far fa-angle-double-left fxs_hidden_s_iBlock" aria-hidden="true"> </span>
                     Keep reading the news
                 </a>
             </p>
