--- a/newsletter.html
+++ b/newsletter.html
@@ -73,7 +73,7 @@
                     <span class="fxs_newsletter-name">The Week Ahead</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-5">
-                <label class="fxs_chip-checkbox fxs_hidden_xs" for="chip-5">
+                <label class="fxs_chip-checkbox" for="chip-5">
                     <span class="fas fa-bell" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Special Alerts</span>
                 </label>
@@ -130,7 +130,7 @@
             </p>
             <p class="fxs_left-mobile-center">
                 <a class="fxs_mutedLink  fxs_back" href="index.html">
-                    <span class="far fa-angle-double-left" aria-hidden="true"></span>
+                    <span class="far fa-angle-double-left fxs_hidden_s_iBlock" aria-hidden="true"></span>
                     Keep reading the news
                 </a>
             </p>
