--- a/getPremium.html
+++ b/getPremium.html
@@ -1,256 +1,181 @@
 <html lang="en" class="">
-  <head>
+
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
     <meta charset="utf-8" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="https://staticcontent.fxstreet.com/website/static-html/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://staticcontent.fxstreet.com/website/static-html/favicon.png"
-      sizes="32x32"
-    />
-    <link
-      rel="shortcut icon"
-      href="https://staticcontent.fxstreet.com/website/static-html/favicon.ico"
-    />
-    <link
-      rel="preload"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i&amp;display=swap"
-      as="style"
-    />
-    <link
-      rel="preload"
-      href="https://staticcontent.fxstreet.com/website/css/fxs_screen.min.css"
-      as="style"
-    />
-    <link
-      rel="preload"
-      href="https://kit.fontawesome.com/22a9d93fa2.js"
-      as="script"
-    />
-    <link
-      rel="preconnect"
-      href="https://staticcontent.fxstreet.com"
-      crossorigin=""
-    />
+    <link rel="apple-touch-icon" sizes="180x180"
+        href="https://staticcontent.fxstreet.com/website/static-html/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="https://staticcontent.fxstreet.com/website/static-html/favicon.png"
+        sizes="32x32" />
+    <link rel="shortcut icon" href="https://staticcontent.fxstreet.com/website/static-html/favicon.ico" />
+    <link rel="preload"
+        href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i&amp;display=swap"
+        as="style" />
+    <link rel="preload" href="https://staticcontent.fxstreet.com/website/css/fxs_screen.min.css" as="style" />
+    <link rel="preload" href="https://kit.fontawesome.com/22a9d93fa2.js" as="script" />
+    <link rel="preconnect" href="https://staticcontent.fxstreet.com" crossorigin="" />
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin="" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <link rel="preconnect" href="https://use.fontawesome.com" crossorigin="" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i&amp;display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://staticcontent.fxstreet.com/website/css/fxs_screen.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i&amp;display=swap"
+        rel="stylesheet" />
+    <link href="https://staticcontent.fxstreet.com/website/css/fxs_screen.min.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/22a9d93fa2.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://kit-pro.fontawesome.com/releases/latest/css/pro.min.css"
-      media="all"
-    />
-    <link
-      rel="stylesheet"
-      href="https://kit-pro.fontawesome.com/releases/latest/css/pro.min.css"
-      media="all"
-    />
+    <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/latest/css/pro.min.css" media="all" />
+    <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/latest/css/pro.min.css" media="all" />
     <title>
-      FXStreet - The Foreign Exchange Market
+        FXStreet - The Foreign Exchange Market
     </title>
     <meta name="lang" content="en" />
-    <meta
-      name="description"
-      content="FXStreet is a leading source for reliable news and real time Forex analysis. FXStreet offers real-time exchange rates, charts and an economic calendar."
-    />
-    <meta
-      name="keywords"
-      content="forex, trading, fx, trade, news, reports, analysis"
-    />
+    <meta name="description"
+        content="FXStreet is a leading source for reliable news and real time Forex analysis. FXStreet offers real-time exchange rates, charts and an economic calendar." />
+    <meta name="keywords" content="forex, trading, fx, trade, news, reports, analysis" />
     <link rel="stylesheet" href="boarding.css" />
-  </head>
+</head>
 
-  <body cz-shortcut-listen="true">
+<body cz-shortcut-listen="true">
     <header class="fxs_simpleHeader">
-      <div class="fxs_container">
-        <a class="fxs_btn fxs_back" href="index.html"
-          ><i class="fas fa-chevron-circle-left" aria-hidden="true"></i>
-          <span>Back</span>
-        </a>
-        <a href="index.html" class="fxs_logo"></a>
-      </div>
+        <div class="fxs_container">
+            <a class="fxs_btn fxs_back" href="index.html"><i class="fas fa-chevron-circle-left" aria-hidden="true"></i>
+                <span>Back</span>
+            </a>
+            <a href="index.html" class="fxs_logo"></a>
+        </div>
     </header>
     <div class="fxs_flexbox_justify_around_items_start">
-      <div class="fxs_poster fxs_poster-medium">
-        <h3 class="fxs_headline_medium">
-          Enjoy the benefits of becoming an FXS Premium Subscriber! - New
-          features added, don’t miss them out!
-        </h3>
-        <p class="fxs_entryPlain_txt_large">
-          <strong
-            >Boost your trading skills and take advantage of Premium FXS
-            Resources.</strong
-          >
-        </p>
-        <div class="fxs_flexbox_direction_column_items_center">
-          <ol class="fxs_list_unstyled">
-            <li>
-              <i class="fas fa-check" aria-hidden="true"></i
-              ><strong>FXS Signals </strong> delivered daily
-            </li>
-            <li>
-              <i class="fas fa-check" aria-hidden="true"></i> More than
-              <strong> 20 different strategies </strong>
-              applied
-            </li>
-            <li>
-              <i class="fas fa-check" aria-hidden="true"></i
-              ><strong>Telegram </strong> channel
-            </li>
-            <li class="fxs_hidden_s">
-              <i class="fas fa-check" aria-hidden="true"></i>Overseas
-              <strong> community</strong>
-            </li>
-            <li class="fxs_hidden_s">
-              <i class="fas fa-check" aria-hidden="true"></i
-              ><strong>Live &amp; recorded </strong> webinars
-            </li>
-            <li class="fxs_hidden_s">
-              <i class="fas fa-check" aria-hidden="true"></i>Multi-device
-              <strong> notifications</strong>
-            </li>
-            <li class="fxs_hidden_s">
-              <i class="fas fa-check" aria-hidden="true"></i>The
-              <strong> most advanced trading tips and techniques</strong>
-            </li>
-            <li class="fxs_hidden_s">
-              <i class="fas fa-check" aria-hidden="true"></i>Dedicated
-              <strong> teachers </strong>
-              and
-              <strong> experienced traders</strong>
-            </li>
-            <li class="fxs_visible_st">
-              <i class="fas fa-check" aria-hidden="true"></i
-              ><strong>...and much more!</strong>
-            </li>
-          </ol>
+        <div class="fxs_poster fxs_poster-medium">
+            <h3 class="fxs_headline_medium">
+                Enjoy the benefits of becoming an FXS Premium Subscriber! - New
+                features added, don’t miss them out!
+            </h3>
+            <p class="fxs_entryPlain_txt_large">
+                <strong>Boost your trading skills and take advantage of Premium FXS
+                    Resources.</strong>
+            </p>
+            <div class="fxs_flexbox_direction_column_items_center">
+                <ol class="fxs_list_unstyled">
+                    <li>
+                        <i class="fas fa-check" aria-hidden="true"></i><strong>FXS Signals </strong> delivered daily
+                    </li>
+                    <li>
+                        <i class="fas fa-check" aria-hidden="true"></i> More than
+                        <strong> 20 different strategies </strong>
+                        applied
+                    </li>
+                    <li>
+                        <i class="fas fa-check" aria-hidden="true"></i><strong>Telegram </strong> channel
+                    </li>
+                    <li class="fxs_hidden_s">
+                        <i class="fas fa-check" aria-hidden="true"></i>Overseas
+                        <strong> community</strong>
+                    </li>
+                    <li class="fxs_hidden_s">
+                        <i class="fas fa-check" aria-hidden="true"></i><strong>Live &amp; recorded </strong> webinars
+                    </li>
+                    <li class="fxs_hidden_s">
+                        <i class="fas fa-check" aria-hidden="true"></i>Multi-device
+                        <strong> notifications</strong>
+                    </li>
+                    <li class="fxs_hidden_s">
+                        <i class="fas fa-check" aria-hidden="true"></i>The
+                        <strong> most advanced trading tips and techniques</strong>
+                    </li>
+                    <li class="fxs_hidden_s">
+                        <i class="fas fa-check" aria-hidden="true"></i>Dedicated
+                        <strong> teachers </strong>
+                        and
+                        <strong> experienced traders</strong>
+                    </li>
+                    <li class="fxs_visible_st">
+                        <i class="fas fa-check" aria-hidden="true"></i><strong>...and much more!</strong>
+                    </li>
+                </ol>
+            </div>
+            <div class="fxs_marginBase_bottom"></div>
+            <hr class="fxs_divider_second  fxs_hidden_s" />
+            <div class="fxs_clearfix fxs_marginBase_bottom fxs_hidden_s"></div>
+            <p class="fxs_entryPlain_txt_large fxs_txt_corp_dark_1_clr fxs_txt_center fxs_hidden_s">
+                <strong>Choose the subscription plan that fits your needs</strong>
+            </p>
+            <div class="fxs_row" id="pricingTable">
+                <div class="fxs_col fxs_col_33">
+                    <p class="fxs_entryPlain_text fxs_txt_highlight fxs_marginHalf_bottom fxs_hidden_s">
+                        <strong>
+                            &nbsp;
+                        </strong>
+                    </p>
+                    <div class="fxs_pricing_table_item fxs_marginBase_bottom">
+                        <div class="fxs_clearfix fxs_txt_center">
+                            <span class="fxs_headline_small fxs_nowrap">1 Month</span>
+                            <div class="fxs_marginHalf_bottom"></div>
+                            <span class="fxs_pricing_table_value fxs_txt_weight_400 fxs_headline_medium">35€</span>
+                            <div class="fxs_marginBase"></div>
+                        </div>
+                        <a href="https://frontend-fxs.github.io/onboarding-payment/?price=35"
+                            class="fxs_btn fxs_btn_cta fxs_btn_block fxs_marginAuto fxs_btn_small">
+                            Subscribe
+                        </a>
+                    </div>
+                </div>
+                <div class="fxs_col fxs_col_33">
+                    <p class="fxs_entryPlain_text fxs_txt_highlight fxs_txt_center fxs_marginHalf_bottom">
+                        <strong>
+                            SAVE 10€
+                        </strong>
+                    </p>
+                    <div class="fxs_pricing_table_item fxs_marginBase_bottom">
+                        <div class="fxs_clearfix fxs_txt_center">
+                            <span class="fxs_headline_small fxs_nowrap">3 Months</span>
+                            <div class="fxs_marginHalf_bottom"></div>
+                            <span class="fxs_pricing_table_value fxs_txt_weight_400 fxs_headline_medium">95€</span>
+                            <div class="fxs_marginBase"></div>
+                        </div>
+                        <a href="https://frontend-fxs.github.io/onboarding-payment/?price=95"
+                            class="fxs_btn fxs_btn_cta fxs_btn_block fxs_marginAuto fxs_btn_small">
+                            Subscribe
+                        </a>
+                    </div>
+                </div>
+                <div class="fxs_col fxs_col_33">
+                    <p class="fxs_entryPlain_text fxs_txt_highlight fxs_txt_center fxs_marginHalf_bottom">
+                        <strong>
+                            SAVE 100€
+                        </strong>
+                    </p>
+                    <div class="fxs_pricing_table_item fxs_pricing_featured_offer fxs_marginBase_bottom">
+                        <div class="fxs_clearfix fxs_txt_center">
+                            <span class="fxs_headline_small fxs_nowrap">12 Months</span>
+                            <div class="fxs_marginHalf_bottom"></div>
+                            <span class="fxs_pricing_table_value fxs_txt_weight_400 fxs_headline_medium">320€</span>
+                            <div class="fxs_marginBase"></div>
+                        </div>
+                        <a href="https://frontend-fxs.github.io/onboarding-payment/?price=320"
+                            class="fxs_btn fxs_btn_cta fxs_btn_block fxs_marginAuto fxs_btn_small">
+                            Subscribe
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!-- Fin bloque de pago----------------------- -->
+            <div class="fxs_clearfix fxs_marginBase"></div>
+            <p class="fxs_right-mobile-center">
+                <a href="getApp.html"
+                    class="fxs_btn fxs_btn_cta  fxs_btn_small fxs_paddingBase_right_big fxs_paddingBase_left_big">
+                    Continue without subscribing
+                </a>
+            </p>
+            <p class="fxs_left-mobile-center">
+                <a class="fxs_mutedLink  fxs_back" href="index.html">
+                    <span class="fas fa-angle-double-left fxs_hidden_s_iBlock"></span>
+                    Keep reading the news
+                </a>
+            </p>
         </div>
-
-        <div class="fxs_marginBase_bottom"></div>
-        <hr class="fxs_divider_second" />
-        <div class="fxs_clearfix fxs_marginBase_bottom"></div>
-        <p
-          class="fxs_entryPlain_txt_large fxs_txt_corp_dark_1_clr fxs_txt_center"
-        >
-          <strong>Choose the subscription plan that fits your needs</strong>
-        </p>
-        <!-- Bloque de pago actualizar ----------------------- -->
-        <div class="fxs_row" id="pricingTable">
-          <div class="fxs_col fxs_col_33">
-            <p
-              class="fxs_entryPlain_text fxs_txt_highlight fxs_marginHalf_bottom"
-            >
-              <strong>
-                &nbsp;
-              </strong>
-            </p>
-            <div class="fxs_pricing_table_item fxs_marginBase_bottom">
-              <div class="fxs_clearfix fxs_txt_center">
-                <span class="fxs_headline_small fxs_nowrap">1 Month</span>
-                <div class="fxs_marginHalf_bottom"></div>
-                <span
-                  class="fxs_pricing_table_value fxs_txt_weight_400 fxs_headline_medium"
-                  >35€</span
-                >
-                <div class="fxs_marginBase"></div>
-              </div>
-              <a
-                href="https://frontend-fxs.github.io/onboarding-payment/?price=35"
-                class="fxs_btn fxs_btn_cta fxs_btn_block fxs_marginAuto fxs_btn_small"
-              >
-                Subscribe
-              </a>
-            </div>
-          </div>
-          <div class="fxs_col fxs_col_33">
-            <p
-              class="fxs_entryPlain_text fxs_txt_highlight fxs_txt_center fxs_marginHalf_bottom"
-            >
-              <strong>
-                SAVE 10€
-              </strong>
-            </p>
-            <div class="fxs_pricing_table_item fxs_marginBase_bottom">
-              <div class="fxs_clearfix fxs_txt_center">
-                <span class="fxs_headline_small fxs_nowrap">3 Months</span>
-                <div class="fxs_marginHalf_bottom"></div>
-                <span
-                  class="fxs_pricing_table_value fxs_txt_weight_400 fxs_headline_medium"
-                  >95€</span
-                >
-                <div class="fxs_marginBase"></div>
-              </div>
-              <a
-                href="https://frontend-fxs.github.io/onboarding-payment/?price=95"
-                class="fxs_btn fxs_btn_cta fxs_btn_block fxs_marginAuto fxs_btn_small"
-              >
-                Subscribe
-              </a>
-            </div>
-          </div>
-          <div class="fxs_col fxs_col_33">
-            <p
-              class="fxs_entryPlain_text fxs_txt_highlight fxs_txt_center fxs_marginHalf_bottom"
-            >
-              <strong>
-                SAVE 100€
-              </strong>
-            </p>
-            <div
-              class="fxs_pricing_table_item fxs_pricing_featured_offer fxs_marginBase_bottom"
-            >
-              <div class="fxs_clearfix fxs_txt_center">
-                <span class="fxs_headline_small fxs_nowrap">12 Months</span>
-                <div class="fxs_marginHalf_bottom"></div>
-                <span
-                  class="fxs_pricing_table_value fxs_txt_weight_400 fxs_headline_medium"
-                  >320€</span
-                >
-                <div class="fxs_marginBase"></div>
-              </div>
-              <a
-                href="https://frontend-fxs.github.io/onboarding-payment/?price=320"
-                class="fxs_btn fxs_btn_cta fxs_btn_block fxs_marginAuto fxs_btn_small"
-              >
-                Subscribe
-              </a>
-            </div>
-          </div>
-        </div>
-        <!-- Fin bloque de pago----------------------- -->
-        <div class="fxs_clearfix fxs_marginBase"></div>
-                <p class="fxs_right-mobile-center">
-          <a
-            href="getApp.html"
-            class="fxs_btn fxs_btn_cta  fxs_btn_small fxs_paddingBase_right_big fxs_paddingBase_left_big"
-          >
-            Continue without subscribing
-          </a>
-        </p>
-        <p class="fxs_left-mobile-center">
-          <a class="fxs_mutedLink  fxs_back" href="index.html">
-            <span class="fas fa-angle-double-left fxs_hidden_s_iBlock"></span> Keep reading the news
-          </a>
-        </p>
-      </div>
     </div>
     <footer class="fxs_footer fxs_modal_footer">
-      <p>&nbsp;</p>
+        <p>&nbsp;</p>
     </footer>
-  </body>
+</body>
+
 </html>
