--- a/index.html
+++ b/index.html
@@ -60,42 +60,42 @@
                 <li>
                     <article>
                         <h3 class="fxs_entryHeadline">
-                            <a href="form.html" title="complete data">Form
+                            <a href="form.html" title="complete data">Forma </a>
                         </h3>
                     </article>
                 </li>
                 <li>
                     <article>
                         <h3 class="fxs_entryHeadline">
-                            <a href="newsletter.html" title="newsletter subscribe">Newsletters
+                            <a href="newsletter.html" title="newsletter subscribe">Newsletters</a>
                         </h3>
                     </article>
                 </li>
                 <li>
                     <article>
                         <h3 class="fxs_entryHeadline">
-                            <a href="authors.html" title="authors subscribe">Authors
+                            <a href="authors.html" title="authors subscribe">Authors</a>
                         </h3>
                     </article>
                 </li>
                 <li>
                     <article>
                         <h3 class="fxs_entryHeadline">
-                            <a href="getPremium.html" title="get Premium">Get Premium
+                            <a href="getPremium.html" title="get Premium">Get Premium</a>
                         </h3>
                     </article>
                 </li>
                 <li>
                     <article>
                         <h3 class="fxs_entryHeadline">
-                            <a href="getAppDesktop.html" title="get App">Get App from Mobile
+                            <a href="getAppDesktop.html" title="get App">Get App from Mobile</a>
                         </h3>
                     </article>
                 </li>
                 <li>
                     <article>
                         <h3 class="fxs_entryHeadline">
-                            <a href="getAppMobile.html" title="get App">Get App from Desktop
+                            <a href="getAppMobile.html" title="get App">Get App from Desktop</a>
                         </h3>
                     </article>
                 </li>
