--- a/getAppMobile.html
+++ b/getAppMobile.html
@@ -1,119 +1,64 @@
 <html lang="en" class="">
-  <head>
+
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
     <meta charset="utf-8" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="https://staticcontent.fxstreet.com/website/static-html/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://staticcontent.fxstreet.com/website/static-html/favicon.png"
-      sizes="32x32"
-    />
-    <link
-      rel="shortcut icon"
-      href="https://staticcontent.fxstreet.com/website/static-html/favicon.ico"
-    />
-    <link
-      rel="preload"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i&amp;display=swap"
-      as="style"
-    />
-    <link
-      rel="preload"
-      href="https://staticcontent.fxstreet.com/website/css/fxs_screen.min.css"
-      as="style"
-    />
-    <link
-      rel="preload"
-      href="https://kit.fontawesome.com/22a9d93fa2.js"
-      as="script"
-    />
-    <link
-      rel="preconnect"
-      href="https://staticcontent.fxstreet.com"
-      crossorigin=""
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin="" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
-    <link rel="preconnect" href="https://use.fontawesome.com" crossorigin="" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i&amp;display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://staticcontent.fxstreet.com/website/css/fxs_screen.min.css"
-      rel="stylesheet"
-    />
+    <link rel="apple-touch-icon" sizes="180x180"
+        href="https://staticcontent.fxstreet.com/website/static-html/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="https://staticcontent.fxstreet.com/website/static-html/favicon.png"
+        sizes="32x32" />
+    <link rel="shortcut icon" href="https://staticcontent.fxstreet.com/website/static-html/favicon.ico" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i&amp;display=swap"
+        rel="stylesheet" />
+    <link href="https://staticcontentqa.azureedge.net/website/css/fxs_screen.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/22a9d93fa2.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://kit-pro.fontawesome.com/releases/latest/css/pro.min.css"
-      media="all"
-    />
-    <link
-      rel="stylesheet"
-      href="https://kit-pro.fontawesome.com/releases/latest/css/pro.min.css"
-      media="all"
-    />
+    <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/latest/css/pro.min.css" media="all" />
     <title>
-      FXStreet - The Foreign Exchange Market
+        FXStreet - The Foreign Exchange Market
     </title>
     <meta name="lang" content="en" />
-    <meta
-      name="description"
-      content="FXStreet is a leading source for reliable news and real time Forex analysis. FXStreet offers real-time exchange rates, charts and an economic calendar."
-    />
-    <meta
-      name="keywords"
-      content="forex, trading, fx, trade, news, reports, analysis"
-    />
-    <link rel="stylesheet" href="boarding.css" />
-  </head>
+    <meta name="description"
+        content="FXStreet is a leading source for reliable news and real time Forex analysis. FXStreet offers real-time exchange rates, charts and an economic calendar." />
+    <meta name="keywords" content="forex, trading, fx, trade, news, reports, analysis" />
 
-  <body cz-shortcut-listen="true">
+</head>
+
+<body cz-shortcut-listen="true">
     <header class="fxs_simpleHeader">
-      <div class="fxs_container">
-        <a class="fxs_btn fxs_back" href="index.html"
-          ><i class="fas fa-chevron-circle-left" aria-hidden="true"></i>
-          <span>Back</span>
-        </a>
-        <a href="index.html" class="fxs_logo"></a>
-      </div>
+        <div class="fxs_container">
+            <a class="fxs_btn fxs_back" href="index.html"><i class="fas fa-chevron-circle-left" aria-hidden="true"></i>
+                <span>Back</span>
+            </a>
+            <a href="index.html" class="fxs_logo"></a>
+        </div>
     </header>
     <div class="fxs_flexbox_justify_around_items_start">
-      <div class="fxs_poster fxs_big-poster">
-        <h3 class="fxs_headline_medium">
-          Don't let economic events get ahead of you
-        </h3>
-        <p class="fxs_entryPlain_txt_large">
-          <strong
-            >Get FXS mobile app and receive early notifications from your
-            selected economic events.</strong
-          >
-        </p>
-        <div class="fxs_clearfix fxs_marginBase_bottom"></div>
-        <p class="fxs_left-mobile-center">
-          <a
-            href="https://play.google.com/store/apps/details?id=com.fxstreet.forexnews&hl=en"
-            class="fxs_btn fxs_btn_cta  fxs_btn_small fxs_paddingBase_right_big fxs_paddingBase_left_big"
-          >
-            Get the app
-          </a>
-        </p>
-        <p class="fxs_right-mobile-center">
-          <a class="fxs_mutedLink fxs_back" href="index.html">
-            Keep reading the news
-          </a>
-        </p>
-      </div>
+        <div class="fxs_poster fxs_big-poster">
+            <h3 class="fxs_headline_medium">
+                Don't let economic events get ahead of you
+            </h3>
+            <p class="fxs_entryPlain_txt_large">
+                <strong>Get FXS mobile app and receive early notifications from your
+                    selected economic events.</strong>
+            </p>
+            <div class="fxs_clearfix fxs_marginBase_bottom"></div>
+            <p class="fxs_left-mobile-center">
+                <a href="https://play.google.com/store/apps/details?id=com.fxstreet.forexnews&hl=en"
+                    class="fxs_btn fxs_btn_cta  fxs_btn_small fxs_paddingBase_right_big fxs_paddingBase_left_big">
+                    Get the app
+                </a>
+            </p>
+            <p class="fxs_right-mobile-center">
+                <a class="fxs_mutedLink fxs_back" href="index.html">
+                    Keep reading the news
+                </a>
+            </p>
+        </div>
     </div>
     <footer class="fxs_footer fxs_modal_footer">
-      <p>&nbsp;</p>
+        <p>&nbsp;</p>
     </footer>
-  </body>
+</body>
+
 </html>
