--- a/newsletter.html
+++ b/newsletter.html
@@ -9,20 +9,10 @@
     <link rel="icon" type="image/png" href="https://staticcontent.fxstreet.com/website/static-html/favicon.png"
         sizes="32x32">
     <link rel="shortcut icon" href="https://staticcontent.fxstreet.com/website/static-html/favicon.ico">
-    <link rel="preload"
-        href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i&amp;display=swap"
-        as="style">
-    <link rel="preload" href="https://staticcontent.fxstreet.com/website/css/fxs_screen.min.css" as="style">
-    <link rel="preload" href="https://kit.fontawesome.com/22a9d93fa2.js" as="script">
-    <link rel="preconnect" href="https://staticcontent.fxstreet.com" crossorigin="">
-    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin="">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link rel="preconnect" href="https://use.fontawesome.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i&amp;display=swap"
         rel="stylesheet">
-    <link href="https://staticcontent.fxstreet.com/website/css/fxs_screen.min.css" rel="stylesheet">
+    <link href="https://staticcontentqa.azureedge.net/website/css/fxs_screen.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/22a9d93fa2.js"></script>
-    <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/latest/css/pro.min.css" media="all">
     <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/latest/css/pro.min.css" media="all">
     <title>
         FXStreet - The Foreign Exchange Market
@@ -37,7 +27,7 @@
 <body cz-shortcut-listen="true">
     <header class="fxs_simpleHeader">
         <div class="fxs_container">
-            <a class="fxs_btn fxs_back" href="index.html"><i class="fas fa-chevron-circle-left" aria-hidden="true"></i>
+            <a class="fxs_btn fxs_back" href="index.html"><i class="fxs_flexbox_justify_center_items_center  fas fa-chevron-circle-left" aria-hidden="true"></i>
                 <span>Back</span>
             </a>
             <a href="index.html" class="fxs_logo"></a>
@@ -53,48 +43,48 @@
 
             <div class="fxs_flexbox_justify_between_wrap">
                 <input type="checkbox" class="fxs_hideElements" id="chip-1">
-                <label class="fxs_chip-checkbox" for="chip-1">
-                    <span class="fas fa-euro-sign" aria-hidden="true"></span>
+                <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-1">
+                    <span class="fxs_flexbox_justify_center_items_center  fas fa-euro-sign" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">European Session</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-2">
-                <label class="fxs_chip-checkbox" for="chip-2">
-                    <span class="fas fa-dollar-sign" aria-hidden="true"></span>
+                <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-2">
+                    <span class="fxs_flexbox_justify_center_items_center  fas fa-dollar-sign" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">American Session</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-3">
-                <label class="fxs_chip-checkbox" for="chip-3">
-                    <span class="fas fa-yen-sign" aria-hidden="true"></span>
+                <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-3">
+                    <span class="fxs_flexbox_justify_center_items_center  fas fa-yen-sign" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Asian Session</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-4">
-                <label class="fxs_chip-checkbox" for="chip-4">
-                    <span class="fas fa-chart-line" aria-hidden="true"></span>
+                <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-4">
+                    <span class="fxs_flexbox_justify_center_items_center  fas fa-chart-line" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">The Week Ahead</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-5">
-                <label class="fxs_chip-checkbox" for="chip-5">
-                    <span class="fas fa-bell" aria-hidden="true"></span>
+                <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-5">
+                    <span class="fxs_flexbox_justify_center_items_center  fas fa-bell" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Special Alerts</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-6">
                 <label class="fxs_chip-checkbox fxs_hidden_xs" for="chip-6">
-                    <span class="fas fa-calendar-check" aria-hidden="true"></span>
+                    <span class="fxs_flexbox_justify_center_items_center  fas fa-calendar-check" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Economic Calendar</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-7">
                 <label class="fxs_chip-checkbox fxs_hidden_xs" for="chip-7">
-                    <span class="fas fa-binoculars" aria-hidden="true"></span>
+                    <span class="fxs_flexbox_justify_center_items_center  fas fa-binoculars" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Currencies Forecast</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-8">
                 <label class="fxs_chip-checkbox  fxs_hidden_xs" for="chip-8">
-                    <span class="fas fa-chart-bar" aria-hidden="true"></span>
+                    <span class="fxs_flexbox_justify_center_items_center  fas fa-chart-bar" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Trading Ideas</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-9">
                 <label class="fxs_chip-checkbox  fxs_hidden_xs" for="chip-9">
-                    <span class="fas fa-euro-sign" aria-hidden="true"></span>
+                    <span class="fxs_flexbox_justify_center_items_center  fas fa-euro-sign" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Subscribe All</span>
                 </label>
             </div>
@@ -116,7 +106,7 @@
                             <span>
                                 SHOW MORE NEWSLETTERS
                             </span>
-                            <span class="fas fa-angle-down"> </span>
+                            <span class="fxs_flexbox_justify_center_items_center  fas fa-angle-down"> </span>
                         </strong>
                     </button>
                 </p>
