--- a/newsletter.html
+++ b/newsletter.html
@@ -68,23 +68,23 @@
                     <span class="fxs_newsletter-name">Special Alerts</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-6">
-                <label class="fxs_chip-checkbox fxs_hidden_xs" for="chip-6">
+                <label class="fxs_chip-checkbox  fxs_hidden_xs_flex fxs_flexbox_justify_start " for="chip-6">
                     <span class="fxs_flexbox_justify_center_items_center  fas fa-calendar-check" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Economic Calendar</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-7">
-                <label class="fxs_chip-checkbox fxs_hidden_xs" for="chip-7">
+                <label class="fxs_chip-checkbox  fxs_hidden_xs_flex fxs_flexbox_justify_start " for="chip-7">
                     <span class="fxs_flexbox_justify_center_items_center  fas fa-binoculars" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Currencies Forecast</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-8">
-                <label class="fxs_chip-checkbox  fxs_hidden_xs" for="chip-8">
-                    <span class="fxs_flexbox_justify_center_items_center  fas fa-chart-bar" aria-hidden="true"></span>
+                <label class="fxs_chip-checkbox fxs_hidden_xs_flex fxs_flexbox_justify_start " for="chip-8">
+                    <span class="fxs_flexbox_justify_center_items_center fas fa-lightbulb-on" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Trading Ideas</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-9">
-                <label class="fxs_chip-checkbox  fxs_hidden_xs" for="chip-9">
-                    <span class="fxs_flexbox_justify_center_items_center  fas fa-euro-sign" aria-hidden="true"></span>
+                <label class="fxs_chip-checkbox fxs_hidden_xs_flex fxs_flexbox_justify_start " for="chip-9">
+                    <span class="fxs_flexbox_justify_center_items_center fas fa-user-check" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Subscribe All</span>
                 </label>
             </div>
