boarding.css added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta name="description"
         content="FXStreet is a leading source for reliable news and real time Forex analysis. FXStreet offers real-time exchange rates, charts and an economic calendar.">
     <meta name="keywords" content="forex, trading, fx, trade, news, reports, analysis">
+    <link rel="stylesheet" href="boarding.css" />
 </head>
 
 <body cz-shortcut-listen="true">
