--- a/authors.html
+++ b/authors.html
@@ -238,6 +238,7 @@
                         </span>
                     </address>
                 </label>
+                <label></label>
                 <div class="fxs_visible_ss fxs_col_100" id="showmore">
                     <hr />
                     <script>
