--- a/getPremium.html
+++ b/getPremium.html
@@ -39,6 +39,7 @@
                 Enjoy the benefits of becoming an FXS Premium Subscriber! - New
                 features added, don’t miss them out!
             </h3>
+            <div class="fxs_clearfix fxs_marginBase_bottom"></div>
             <p class="fxs_entryPlain_txt_large">
                 <strong>Boost your trading skills and take advantage of Premium FXS
                     Resources.</strong>
