--- a/newsletter.html
+++ b/newsletter.html
@@ -87,6 +87,7 @@
                     <span class="fxs_flexbox_justify_center_items_center fas fa-user-check" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Subscribe All</span>
                 </label>
+                <label></label>
             </div>
             <div class="fxs_visible_ss fxs_col_100" id="showmore">
                 <hr />
