--- a/form.html
+++ b/form.html
@@ -316,7 +316,7 @@
             </p>
             <p class="fxs_left-mobile-center">
                 <a class="fxs_mutedLink  fxs_back" href="index.html">
-                    <span class="fas fa-angle-double-left fxs_hidden_s_iBlock"></span> Keep reading the news
+                    <span class="fas fa-angle-double-left fxs_hidden_768_iBlock"></span> Keep reading the news
                 </a>
             </p>
         </div>
